--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tera web</title>                  <!--Change for your own title-->
+    <title>The Black Markets illegal Games</title>                 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -16,7 +16,7 @@
     <header>
       <nav class="content">
         <h1>
-          <a href="index.html">Tera Art Gallery</a> <!--Change your own title for the banner-->
+          <a href="index.html">The Illegal Stuff...</a> 
         </h1>
         <ul>
           <li>
@@ -27,30 +27,30 @@
     </header>
 
     <article id="page" class="content">
-      <h2>My Gallery</h2>                <!--Change for your own title-->
+      <h2>The illegal Games...</h2>                
       <p>
-      Write your texting here              <!--Write your texting-->
+      We Supply the best games the Gov't Doesn't allow you. So play this Alot because you're a rebel               <!--Write your texting-->
       </p>
       
       <ul class="gallery">
         <li>
-          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=terafree&ProjectName=scrolling%20background> <!--Add your own link-->
-            <img src="img/game1.jpg">                 <!--Add your own small jpg-->
+          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=mario%20game> <!--Add your own link-->
+            <img src="img/mario.png">                 <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="img/photos/photo-2-800x800.jpg"> <!--Add your own link-->
-            <img src="img/photo-2-200x200.jpg"> <!--Add your own small jpg-->
+          <a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=Bouncing%20example"> <!--Add your own link-->
+            <img src="img/pong.png"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="img/photos/photo-3-800x800.jpg"> <!--Add your own link-->
-            <img src="img/photo-3-200x200.jpg"> <!--Add your own small jpg-->
+          <a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=3.2%20more%20complicated%20"> <!--Add your own link-->
+            <img src="img/complicated.png"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="img/photos/photo-4-800x800.jpg"> <!--Add your own link-->
-            <img src="img/photo-4-200x200.jpg"> <!--Add your own small jpg-->
+          <a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=Calculator"> <!--Add your own link-->
+            <img src="img/calc.png"> <!--Add your own small jpg-->
           </a>
         </li>
         
@@ -60,7 +60,7 @@
      <p> </p>
     <footer>
       <div class="content">
-        <p>Reflections of your work</p>      <!--Reflections about your games-->
+        <p>The 1st to the left is an exclusive Mario game not in stores yet. make sure to tap the arrow keys not hold. The one Next to it how ever is a old school pong game also not available because it has color unlike the original one. The arrow is a calendar guessing game of numbers. The last one is a calculator home made that can help you if you need it.</p>      <!--Reflections about your games-->
       </div>
     </footer>
   </body>
