--- a/gallery.html
+++ b/gallery.html
@@ -39,17 +39,17 @@
           </a>
         </li>
         <li>
-          <a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=Bouncing%20example"> <!--Add your own link-->
+          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=Bouncing%20example> <!--Add your own link-->
             <img src="img/pong.png"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=3.2%20more%20complicated%20"> <!--Add your own link-->
+          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=3.2%20more%20complicated%20> <!--Add your own link-->
             <img src="img/complicated.png"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=Calculator"> <!--Add your own link-->
+          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=ivoruscool&ProjectName=Calculator> <!--Add your own link-->
             <img src="img/calc.png"> <!--Add your own small jpg-->
           </a>
         </li>
